--- a/bower.json
+++ b/bower.json
@@ -6,11 +6,11 @@
     "bootstrap": "^3.2.0",
     "angular-animate": "^1.4.0",
     "angular-cookies": "^1.4.0",
+    "angular-google-maps": "~2.2.1",
     "angular-resource": "^1.4.0",
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
-    "angular-touch": "^1.4.0",
-    "ngmap": "^1.17.6"
+    "angular-touch": "^1.4.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
